--- a/Live_Lecture/Lecture_05.ipynb
+++ b/Live_Lecture/Lecture_05.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "dd97f0e1",
+   "id": "16a48c52",
    "metadata": {},
    "source": [
     "![](https://docs.microsoft.com/vi-vn/azure/architecture/data-science-process/media/lifecycle/tdsp-lifecycle2.png)"
@@ -15,7 +15,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "20654c50",
+   "id": "e133cb5c",
    "metadata": {},
    "source": [
     "![image.png](attachment:image.png)"
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ea308ba",
+   "id": "c9a9a844",
    "metadata": {},
    "source": [
     "### Linear Regression"
@@ -36,7 +36,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "5fc43f8c",
+   "id": "3fe94cf9",
    "metadata": {},
    "source": [
     "![image.png](attachment:image.png)"
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2582375",
+   "id": "ae66e024",
    "metadata": {},
    "source": [
     "- Structured data\n",
@@ -59,7 +59,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "e6df556c",
+   "id": "f9b0abc5",
    "metadata": {},
    "source": [
     "![image.png](attachment:image.png)"
@@ -72,7 +72,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "474a8396",
+   "id": "8908a3fe",
    "metadata": {},
    "source": [
     "![image.png](attachment:image.png)"
@@ -85,10 +85,18 @@
     }
    },
    "cell_type": "markdown",
-   "id": "f72e0483",
+   "id": "4cc85e5f",
    "metadata": {},
    "source": [
     "![image.png](attachment:image.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3c02d67a",
+   "metadata": {},
+   "source": [
+    "Cross validation / K-fold"
    ]
   },
   {
@@ -98,7 +106,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "1c8c2208",
+   "id": "53e002ef",
    "metadata": {},
    "source": [
     "![image.png](attachment:image.png)"
@@ -106,16 +114,43 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20183f0b",
+   "id": "f32f72da",
    "metadata": {},
    "source": [
     "![](https://static.javatpoint.com/tutorial/ai/images/types-of-artificial-intelligence2.png)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "45b0742b",
+   "metadata": {},
+   "source": [
+    "- Data drift\n",
+    "- Model drift"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ad1dcb98",
+   "metadata": {},
+   "source": [
+    "- Compile-time\n",
+    "- Run-time"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a6b127a1",
+   "metadata": {},
+   "source": [
+    "- Compiler programming\n",
+    "- Interpreter programming"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ee5a644",
+   "id": "9176f1d7",
    "metadata": {},
    "outputs": [],
    "source": []
